adding rmd homework

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,10 @@ Demo/
 EndTerm/
 Grading/
 HomeworkAssignments/*.pdf
-HomeworkAssignments/Homework_Assignment_7_Question_2_correction.png
+HomeworkAssignments/Homework_Assignment_7_Question_2_corrections.png
 HomeworkAssignments/Student_homework_submission/
 HomeworkAssignments/rainfall.csv
+HomeworkAssignments//homework_assignment_1_solution.Rmd
 MidTerm/
 MyNotes/
 Quiz/
