--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,22 @@ Class_list/
 Demo/
 EndTerm/
 Grading/
-HomeworkAssignments/*.pdf
 HomeworkAssignments/Homework_Assignment_7_Question_2_corrections.png
 HomeworkAssignments/Student_homework_submission/
 HomeworkAssignments/rainfall.csv
 HomeworkAssignments//homework_assignment_1_solution.Rmd
+Jonathan_assignments/
 MidTerm/
 MyNotes/
 Quiz/
+Recordings/
 References/
 SCPD/
 Stats_Dept_Roster_9_2019.xlsx
 stats191_2020/
 Student_evaluation/
+TA_Evaluation/
 Textbook/
 *.Rhistroy
 LectureNotes/
+.gitignore
